--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2family=Poppins:wght@300;400;500;600;700;800;900& display=swap');
 
 * {
     margin: 0;
@@ -12,7 +11,7 @@
 }
 
 :root {
-    --bg-color: #081b29;
+    --bg-color: #000000;
     --second-bg-color: #112e42;
     --text-color: #ededed;
     --main-color: #00abf0;
@@ -79,6 +78,19 @@ section {
     padding: 0 9%;
 }
 
+#background-video {
+    /* width: 100vw;
+    height: 100vh; */
+    object-fit:contain;
+    position: fixed;
+    /* left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0; */
+    z-index: -1;
+    /* padding: 40rem; */
+  }
+
 .home-content {
     max-width: 60rem;
 }
@@ -97,8 +109,8 @@ section {
 .home-content .text-animate h3 {
     font-size: 3.2rem;
     font-weight: 700;
-    color: transparent;
-    -webkit-text-stroke: 0.7px var(--main-color);
+    color: var(--main-color);
+    /* -webkit-text-stroke: 0.5px white; */
 }
 
 .home-content p {
@@ -108,4 +120,114 @@ section {
 
 .btn-box {
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 34.5rem;
+    height: 5rem;
 }
+
+.btn-box .btn {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 100%;
+    background-color: var(--main-color);
+    border: 0.2rem solid var(--main-color);
+    border-radius: 0.8rem;
+    font-size: 1.8rem;
+    letter-spacing: 0.1rem;
+    color: var(--bg-color);
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    color: var(--bg-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.btn-box .btn:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-box .btn:nth-child(2):hover {
+    background: transparent;
+    color: var(--bg-color);
+}
+
+.btn-box .btn:nth-child(2)::before {
+    background: var(--main-color);
+    color: var(--bg-color);
+}
+
+
+.btn-box .btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: var(--bg-color);
+    z-index: -1;
+    transition: 0.5s;
+}
+
+.btn-box .btn:hover {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-box .btn:hover::before {
+    width: 100%;
+}
+
+.home-sci {
+    position: absolute;
+    bottom: 4rem;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: 0.2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 20px;
+    color: var(--main-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.home-sci a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: -1;
+    transition: 0.5s;
+}
+
+.home-sci a:hover::before {
+    background: var(--main-color);
+    /* color: var(--bg-color); */
+}
+
+.home-sci a:hover {
+    /* background: var(--main-color); */
+    color: var(--bg-color);
+}
+
