--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,14 @@ section {
     /* width: 100vw;
     height: 100vh; */
     object-fit:contain;
-    position: fixed;
+    position: absolute;
     /* left: 0;
     right: 0;
     top: 0;
     bottom: 0; */
     z-index: -1;
     /* padding: 40rem; */
-  }
+}
 
 .home-content {
     max-width: 60rem;
@@ -232,3 +232,92 @@ section {
 }
 
 
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background: var(--bg-color);
+}
+
+.heading {
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.about span {
+    color: var(--main-color);
+}
+
+.about-img {
+    position: relative;
+    width: 35rem;
+    height: 35rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: red solid 2px; */
+}
+
+#about-video {
+    /* width: 100vw;
+    height: 100vh; */
+    /* object-fit:contain;
+    position: absolute; */
+    /* left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0; */
+    /* width: 50%;
+    height: 50%; */
+    /* z-index: 1; */
+    /* padding: 40rem; */
+    /* border: orange solid 5px; */
+    width: 90%;
+    height: 90%;
+  }
+
+  .about-img video {
+    border-radius: 50%;
+    border: white solid 2px;
+  }
+  
+
+.about-img .circle-spin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border-top: 0.2rem solid transparent;
+    border-bottom: 0.2rem solid transparent;
+
+    border-left: 0.2rem solid var(--main-color);
+    border-right: 0.2rem solid var(--main-color);
+}
+
+.about-content {
+    text-align: center;
+}
+
+.about-content h3 {
+    font-size: 3rem;
+    color: var(--main-color);
+}
+
+.about-content p {
+    font-size: 2rem;
+    line-height: 175%;
+    margin: 2rem 0 3rem;
+}
+
+.btn-box.btns {
+    display: inline-block;
+    width: 15rem;
+}
